Fix: gradlew 실행 권한 변경

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
           echo "spring.datasource.username=$DB_USER" >> ./src/main/resources/application-private.properties
           echo "spring.datasource.password=$DB_PASSWORD" >> ./src/main/resources/application-private.properties
 
+      - name: Change gradlew permissions
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle Wrapper
         run: ./gradlew bootJar
 
