--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,10 +28,14 @@ jobs:
           echo "spring.datasource.url=$DB_URL" >> ./src/main/resources/application-private.properties
           echo "spring.datasource.username=$DB_USER" >> ./src/main/resources/application-private.properties
           echo "spring.datasource.password=$DB_PASSWORD" >> ./src/main/resources/application-private.properties
+          echo "jwt.secret-key=$JWT_SECRET_KEY" >> ./src/main/resources/application-private.properties
+          echo "jwt.access-token-expiration-time=$JWT_ACCESS_TOKEN_EXPIRATION_TIME" >> ./src/main/resources/application-private.properties
         env:
           DB_URL: ${{ secrets.DB_URL }}
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+          JWT_ACCESS_TOKEN_EXPIRATION_TIME: ${{ secrets.JWT_ACCESS_TOKEN_EXPIRATION_TIME }}
 
       - name: Change gradlew permissions
         run: chmod +x ./gradlew
